// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`DoubleLogo > renders with custom icon 1`] = `
<DocumentFragment>
  <div
    class="flex flex-col items-stretch basis-auto box-border relative min-h-[0px] min-w-[0px] shrink-0 w-[32px] h-[32px]"
  >
    <div
      class="flex flex-col items-stretch basis-auto box-border min-h-[0px] min-w-[0px] shrink-0 w-[var(--c-w)] overflow-hidden absolute top-[0px] left-[0px]"
      data-testid="input-currency-logo-container"
      style="--c-w: 15px;"
    >
      <div
        class="flex flex-col basis-auto box-border min-h-[0px] min-w-[0px] shrink-0 items-center justify-center w-[32px] h-[32px] relative [pointer-events:auto]"
        data-testid="token-logo"
      >
        <div
          class="flex flex-col items-stretch basis-auto box-border min-h-[0px] min-w-[0px] shrink-0 w-[var(--c-w)] h-[var(--c-h)] bg-[color:var(--c-bg)] rounded-[999999px] opacity-[0] absolute top-[var(--c-top)] left-[var(--c-left)] z-[var(--c-z)]"
          style="--c-w: 96%; --c-h: 96%; --c-bg: #FFFFFF; --c-top: 2%; --c-left: 2%; --c-z: 0;"
        />
        <div
          data-testid="img-token-image"
          style="box-sizing: border-box; display: flex; flex-direction: column; flex-shrink: 0; min-width: 0;"
        >
          <img
            height="32"
            src="https://raw.githubusercontent.com/Uniswap/assets/master/blockchains/ethereum/assets/0x1f9840a85d5aF5bf1D1762F925BDADdC4201F984/logo.png"
            style="object-fit: cover; width: 32px; height: 32px; border-radius: 32px; z-index: 1;"
            width="32"
          />
        </div>
      </div>
    </div>
    <div
      class="flex items-stretch basis-auto box-border min-h-[0px] min-w-[0px] shrink-0 flex-row-reverse w-[var(--c-w)] overflow-hidden absolute top-[0px] right-[0px]"
      data-testid="output-currency-logo-container"
      style="--c-w: 15px;"
    >
      <div
        class="flex flex-col basis-auto box-border min-h-[0px] min-w-[0px] shrink-0 items-center justify-center w-[32px] h-[32px] relative [pointer-events:auto]"
        data-testid="token-logo"
      >
        <div
          class="flex flex-col items-stretch basis-auto box-border min-h-[0px] min-w-[0px] shrink-0 w-[var(--c-w)] h-[var(--c-h)] bg-[color:var(--c-bg)] rounded-[999999px] opacity-[0] absolute top-[var(--c-top)] left-[var(--c-left)] z-[var(--c-z)]"
          style="--c-w: 96%; --c-h: 96%; --c-bg: #FFFFFF; --c-top: 2%; --c-left: 2%; --c-z: 0;"
        />
        <div
          data-testid="img-token-image"
          style="box-sizing: border-box; display: flex; flex-direction: column; flex-shrink: 0; min-width: 0;"
        >
          <img
            height="32"
            src="https://raw.githubusercontent.com/Uniswap/assets/master/blockchains/ethereum/assets/0x2260fac5e5542a773aa44fbcfeDf7c193bc2c599/logo.png"
            style="object-fit: cover; width: 32px; height: 32px; border-radius: 32px; z-index: 1;"
            width="32"
          />
        </div>
      </div>
    </div>
    <div
      class="flex flex-col items-stretch basis-auto box-border min-h-[0px] min-w-[0px] shrink-0 absolute right-[var(--c-right)] bottom-[var(--c-bottom)] z-[var(--c-z)]"
      style="--c-right: -4px; --c-bottom: -4px; --c-z: 10;"
    >
      <div
        class="flex flex-col items-stretch basis-auto box-border relative min-h-[0px] min-w-[0px] shrink-0"
        data-testid="custom-icon"
      >
        Custom Icon
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`DoubleLogo > renders with custom size 1`] = `
<DocumentFragment>
  <div
    class="flex flex-col items-stretch basis-auto box-border relative min-h-[0px] min-w-[0px] shrink-0 w-[48px] h-[48px]"
  >
    <div
      class="flex flex-col items-stretch basis-auto box-border min-h-[0px] min-w-[0px] shrink-0 w-[var(--c-w)] overflow-hidden absolute top-[0px] left-[0px]"
      data-testid="input-currency-logo-container"
      style="--c-w: 23px;"
    >
      <div
        class="flex flex-col basis-auto box-border min-h-[0px] min-w-[0px] shrink-0 items-center justify-center w-[48px] h-[48px] relative [pointer-events:auto]"
        data-testid="token-logo"
      >
        <div
          class="flex flex-col items-stretch basis-auto box-border min-h-[0px] min-w-[0px] shrink-0 w-[var(--c-w)] h-[var(--c-h)] bg-[color:var(--c-bg)] rounded-[999999px] opacity-[0] absolute top-[var(--c-top)] left-[var(--c-left)] z-[var(--c-z)]"
          style="--c-w: 96%; --c-h: 96%; --c-bg: #FFFFFF; --c-top: 2%; --c-left: 2%; --c-z: 0;"
        />
        <div
          data-testid="img-token-image"
          style="box-sizing: border-box; display: flex; flex-direction: column; flex-shrink: 0; min-width: 0;"
        >
          <img
            height="48"
            src="https://raw.githubusercontent.com/Uniswap/assets/master/blockchains/ethereum/assets/0x1f9840a85d5aF5bf1D1762F925BDADdC4201F984/logo.png"
            style="object-fit: cover; width: 48px; height: 48px; border-radius: 48px; z-index: 1;"
            width="48"
          />
        </div>
      </div>
    </div>
    <div
      class="flex items-stretch basis-auto box-border min-h-[0px] min-w-[0px] shrink-0 flex-row-reverse w-[var(--c-w)] overflow-hidden absolute top-[0px] right-[0px]"
      data-testid="output-currency-logo-container"
      style="--c-w: 23px;"
    >
      <div
        class="flex flex-col basis-auto box-border min-h-[0px] min-w-[0px] shrink-0 items-center justify-center w-[48px] h-[48px] relative [pointer-events:auto]"
        data-testid="token-logo"
      >
        <div
          class="flex flex-col items-stretch basis-auto box-border min-h-[0px] min-w-[0px] shrink-0 w-[var(--c-w)] h-[var(--c-h)] bg-[color:var(--c-bg)] rounded-[999999px] opacity-[0] absolute top-[var(--c-top)] left-[var(--c-left)] z-[var(--c-z)]"
          style="--c-w: 96%; --c-h: 96%; --c-bg: #FFFFFF; --c-top: 2%; --c-left: 2%; --c-z: 0;"
        />
        <div
          data-testid="img-token-image"
          style="box-sizing: border-box; display: flex; flex-direction: column; flex-shrink: 0; min-width: 0;"
        >
          <img
            height="48"
            src="https://raw.githubusercontent.com/Uniswap/assets/master/blockchains/ethereum/assets/0x2260fac5e5542a773aa44fbcfeDf7c193bc2c599/logo.png"
            style="object-fit: cover; width: 48px; height: 48px; border-radius: 48px; z-index: 1;"
            width="48"
          />
        </div>
      </div>
    </div>
    <div
      class="flex flex-col items-stretch basis-auto box-border min-h-[0px] min-w-[0px] shrink-0 absolute right-[var(--c-right)] bottom-[var(--c-bottom)] z-[var(--c-z)]"
      style="--c-right: -4px; --c-bottom: -4px; --c-z: 10;"
    >
      <div
        class="flex flex-col basis-auto box-border relative min-h-[0px] min-w-[0px] shrink-0 items-center justify-center overflow-hidden z-[var(--c-z)]"
        data-testid="network-logo-1"
        style="--c-z: 10; width: 22.400000000000002px; height: 22.400000000000002px; border-radius: 6.720000000000001px; border-width: 1.6px;"
      >
        <div
          class="css-view-175oi2r r-flexBasis-1mlwlqe r-overflow-1udh08x r-zIndex-417010"
          style="object-fit: contain; width: 20.200000000000003px; height: 20.200000000000003px;"
        >
          <div
            class="css-view-175oi2r r-backgroundColor-1niwhzg r-backgroundPosition-vvn4in r-backgroundRepeat-u6sd8q r-bottom-1p0dtai r-height-1pi2tsx r-left-1d2f490 r-position-u8s1d r-right-zchlnj r-top-ipm5af r-width-13qz1uu r-zIndex-1wyyakw r-backgroundSize-4gszlv"
            style="background-image: url(ethereum-logo.png);"
          />
          <img
            alt=""
            class="css-accessibilityImage-9pa8cd"
            draggable="false"
            src="ethereum-logo.png"
          />
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`DoubleLogo > renders with one valid and one undefined currency 1`] = `
<DocumentFragment>
  <div
    class="flex flex-col basis-auto box-border min-h-[0px] min-w-[0px] shrink-0 items-center justify-center w-[32px] h-[32px] relative [pointer-events:auto]"
    data-testid="token-logo"
  >
    <div
      class="flex flex-col items-stretch basis-auto box-border min-h-[0px] min-w-[0px] shrink-0 w-[var(--c-w)] h-[var(--c-h)] bg-[color:var(--c-bg)] rounded-[999999px] opacity-[0] absolute top-[var(--c-top)] left-[var(--c-left)] z-[var(--c-z)]"
      style="--c-w: 96%; --c-h: 96%; --c-bg: #FFFFFF; --c-top: 2%; --c-left: 2%; --c-z: 0;"
    />
    <div
      data-testid="img-token-image"
      style="box-sizing: border-box; display: flex; flex-direction: column; flex-shrink: 0; min-width: 0;"
    >
      <img
        height="32"
        src="https://raw.githubusercontent.com/Uniswap/assets/master/blockchains/ethereum/assets/0x1f9840a85d5aF5bf1D1762F925BDADdC4201F984/logo.png"
        style="object-fit: cover; width: 32px; height: 32px; border-radius: 32px; z-index: 1;"
        width="32"
      />
    </div>
    <div
      class="flex flex-col items-stretch basis-auto box-border min-h-[0px] min-w-[0px] shrink-0 absolute right-[var(--c-right)] bottom-[var(--c-bottom)] z-[var(--c-z)]"
      style="--c-right: -3px; --c-bottom: -2px; --c-z: 10;"
    >
      <div
        class="flex flex-col basis-auto box-border relative min-h-[0px] min-w-[0px] shrink-0 items-center justify-center overflow-hidden z-[var(--c-z)]"
        data-testid="network-logo-1"
        style="--c-z: 10; width: 16px; height: 16px; border-radius: 4.8px; border-width: 1.5px;"
      >
        <div
          class="css-view-175oi2r r-flexBasis-1mlwlqe r-overflow-1udh08x r-zIndex-417010"
          style="object-fit: contain; width: 14px; height: 14px;"
        >
          <div
            class="css-view-175oi2r r-backgroundColor-1niwhzg r-backgroundPosition-vvn4in r-backgroundRepeat-u6sd8q r-bottom-1p0dtai r-height-1pi2tsx r-left-1d2f490 r-position-u8s1d r-right-zchlnj r-top-ipm5af r-width-13qz1uu r-zIndex-1wyyakw r-backgroundSize-4gszlv"
            style="background-image: url(ethereum-logo.png);"
          />
          <img
            alt=""
            class="css-accessibilityImage-9pa8cd"
            draggable="false"
            src="ethereum-logo.png"
          />
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`DoubleLogo > renders with two undefined currencies 1`] = `
<DocumentFragment>
  <div
    class="rounded-[100px] [font-size:calc(var(--size,24px)/3)] font-[535] text-center flex items-center justify-center relative"
    style="--size: 32px; color: rgb(252, 116, 254); background-color: rgb(254, 244, 255); height: 32px; line-height: 32px; width: 32px;"
  />
</DocumentFragment>
`;

exports[`DoubleLogo > renders with two valid currencies 1`] = `
<DocumentFragment>
  <div
    class="flex flex-col items-stretch basis-auto box-border relative min-h-[0px] min-w-[0px] shrink-0 w-[32px] h-[32px]"
  >
    <div
      class="flex flex-col items-stretch basis-auto box-border min-h-[0px] min-w-[0px] shrink-0 w-[var(--c-w)] overflow-hidden absolute top-[0px] left-[0px]"
      data-testid="input-currency-logo-container"
      style="--c-w: 15px;"
    >
      <div
        class="flex flex-col basis-auto box-border min-h-[0px] min-w-[0px] shrink-0 items-center justify-center w-[32px] h-[32px] relative [pointer-events:auto]"
        data-testid="token-logo"
      >
        <div
          class="flex flex-col items-stretch basis-auto box-border min-h-[0px] min-w-[0px] shrink-0 w-[var(--c-w)] h-[var(--c-h)] bg-[color:var(--c-bg)] rounded-[999999px] opacity-[0] absolute top-[var(--c-top)] left-[var(--c-left)] z-[var(--c-z)]"
          style="--c-w: 96%; --c-h: 96%; --c-bg: #FFFFFF; --c-top: 2%; --c-left: 2%; --c-z: 0;"
        />
        <div
          data-testid="img-token-image"
          style="box-sizing: border-box; display: flex; flex-direction: column; flex-shrink: 0; min-width: 0;"
        >
          <img
            height="32"
            src="https://raw.githubusercontent.com/Uniswap/assets/master/blockchains/ethereum/assets/0x1f9840a85d5aF5bf1D1762F925BDADdC4201F984/logo.png"
            style="object-fit: cover; width: 32px; height: 32px; border-radius: 32px; z-index: 1;"
            width="32"
          />
        </div>
      </div>
    </div>
    <div
      class="flex items-stretch basis-auto box-border min-h-[0px] min-w-[0px] shrink-0 flex-row-reverse w-[var(--c-w)] overflow-hidden absolute top-[0px] right-[0px]"
      data-testid="output-currency-logo-container"
      style="--c-w: 15px;"
    >
      <div
        class="flex flex-col basis-auto box-border min-h-[0px] min-w-[0px] shrink-0 items-center justify-center w-[32px] h-[32px] relative [pointer-events:auto]"
        data-testid="token-logo"
      >
        <div
          class="flex flex-col items-stretch basis-auto box-border min-h-[0px] min-w-[0px] shrink-0 w-[var(--c-w)] h-[var(--c-h)] bg-[color:var(--c-bg)] rounded-[999999px] opacity-[0] absolute top-[var(--c-top)] left-[var(--c-left)] z-[var(--c-z)]"
          style="--c-w: 96%; --c-h: 96%; --c-bg: #FFFFFF; --c-top: 2%; --c-left: 2%; --c-z: 0;"
        />
        <div
          data-testid="img-token-image"
          style="box-sizing: border-box; display: flex; flex-direction: column; flex-shrink: 0; min-width: 0;"
        >
          <img
            height="32"
            src="https://raw.githubusercontent.com/Uniswap/assets/master/blockchains/ethereum/assets/0x2260fac5e5542a773aa44fbcfeDf7c193bc2c599/logo.png"
            style="object-fit: cover; width: 32px; height: 32px; border-radius: 32px; z-index: 1;"
            width="32"
          />
        </div>
      </div>
    </div>
    <div
      class="flex flex-col items-stretch basis-auto box-border min-h-[0px] min-w-[0px] shrink-0 absolute right-[var(--c-right)] bottom-[var(--c-bottom)] z-[var(--c-z)]"
      style="--c-right: -4px; --c-bottom: -4px; --c-z: 10;"
    >
      <div
        class="flex flex-col basis-auto box-border relative min-h-[0px] min-w-[0px] shrink-0 items-center justify-center overflow-hidden z-[var(--c-z)]"
        data-testid="network-logo-1"
        style="--c-z: 10; width: 16px; height: 16px; border-radius: 4.8px; border-width: 1.6px;"
      >
        <div
          class="css-view-175oi2r r-flexBasis-1mlwlqe r-overflow-1udh08x r-zIndex-417010"
          style="object-fit: contain; width: 13.8px; height: 13.8px;"
        >
          <div
            class="css-view-175oi2r r-backgroundColor-1niwhzg r-backgroundPosition-vvn4in r-backgroundRepeat-u6sd8q r-bottom-1p0dtai r-height-1pi2tsx r-left-1d2f490 r-position-u8s1d r-right-zchlnj r-top-ipm5af r-width-13qz1uu r-zIndex-1wyyakw r-backgroundSize-4gszlv"
            style="background-image: url(ethereum-logo.png);"
          />
          <img
            alt=""
            class="css-accessibilityImage-9pa8cd"
            draggable="false"
            src="ethereum-logo.png"
          />
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
